# TardFi

./: .gitmodules  README.md
Frontend/: pnpm-lock.yaml
Frontend/src/app/: globals.css  layout.tsx
Frontend/src/app/market-place/: page.tsx
Frontend/src/components/: Chart.tsx  Footer.tsx
Frontend/src/lib/: mockData.ts
Frontend/tardfii/: package.json
Frontend/tardfii/src/app/: not-found.tsx  page.tsx  providers.tsx
Frontend/tardfii/src/components/: Navbar.tsx  OilCard.tsx  TradePercentageSelector.tsx  index.ts
Frontend/tardfii/src/lib/: config.ts
smartContract/: builddocs.md  foundry.toml  remappings.txt
smartContract/src/Permission/: OilCompanyPermission.sol  OilOwnerPermissionManager.sol  PermissionManager.sol
smartContract/src/interface/: AggregatorV3Interface.sol
smartContract/src/interface/oracle/: IOilOracle.sol
smartContract/src/interface/permissions/: IPermissionManager.sol
smartContract/src/libraries/: OracleCloneLib.sol  PermissionModifier.sol
smartContract/src/oracle/: OilOracle.sol  OilOracleFactory.sol  OilOracleMaster.sol
zk/: .gitignore  OIL_TOKENIZATION_PLATFORM.md
zk/db/: README.md  run_seeder.sh  seed.sql
zk/db/data/: oil_tokens.json
zk/db/entity/: Cargo.toml
zk/db/entity/src/: comment.rs  lib.rs  oil_token.rs  prelude.rs  saved_token.rs  tokenization.rs  (+1 more)
zk/db/src/: main.rs  seeder.rs
zk/host/: Cargo.toml
zk/host/src/: comment.rs  lib.rs  main.rs  oil_token.rs  overall.rs  saved_token.rs  sync_state.rs  tokenization.rs
zk/methods/: Cargo.toml
zk/methods/core/: Cargo.toml
zk/methods/oil_token/: Cargo.toml
(+3 files in other folders)
